[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Scripts/text_area.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/World/Overworld/main_land/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Font_Basic.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Scenes/World/Overworld/main_land/shop.gd" type="Script" id=5]
[ext_resource path="res://Assets/Global/achivement_object.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.396078, 0.305882, 0.203922, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.215686, 0.137255, 0.054902, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Animation" id=1]
resource_name = "new_scene_loader"
tracks/0/type = "value"
tracks/0/path = NodePath("transition_layer/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "load_next_scene"
}, {
"args": [  ],
"method": "enable_motion"
} ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="World_Player" parent="." groups=["Player"] instance=ExtResource( 3 )]
position = Vector2( 120, 168 )
accel_rate = 5.0
decel_rate = 10.0
move_speed = 96

[node name="transition_layer" type="CanvasLayer" parent="."]
layer = 10

[node name="CanvasModulate" type="ColorRect" parent="transition_layer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_area" type="CanvasLayer" parent="." groups=["text_area"]]
layer = 10
script = ExtResource( 1 )

[node name="area_base" type="Control" parent="text_area"]
visible = false
margin_top = 472.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="area_text" type="Label" parent="text_area/area_base"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 2 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="area_name" type="Label" parent="text_area/area_base"]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="text_area"]
process_mode = 0
wait_time = 0.025

[node name="shop" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 10
script = ExtResource( 5 )

[node name="shop_base" type="Control" parent="shop"]
visible = false
margin_top = 472.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop_zone" type="Panel" parent="shop/shop_base"]
margin_left = 832.0
margin_top = -448.0
margin_right = 1008.0
margin_bottom = -88.0

[node name="shop_list" type="ItemList" parent="shop/shop_base/shop_zone"]
margin_left = 8.0
margin_top = 40.0
margin_right = 168.0
margin_bottom = 344.0

[node name="shop_text" type="Label" parent="shop/shop_base/shop_zone"]
margin_right = 176.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "SHOP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/new_scene_loader = SubResource( 1 )

[node name="achievement_shown" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="text_area/Timer" to="text_area" method="_on_Timer_timeout"]
